--- a/MiniMix/Base.lproj/Main.storyboard
+++ b/MiniMix/Base.lproj/Main.storyboard
@@ -391,18 +391,18 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="119" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="U2O-PT-aGH">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="110" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="U2O-PT-aGH">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="492"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SongCell" rowHeight="119" id="QTu-1j-fdu" customClass="SongListingTableViewCell" customModule="MiniMix" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="119"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SongCell" rowHeight="110" id="QTu-1j-fdu" customClass="SongListingTableViewCell" customModule="MiniMix" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="110"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QTu-1j-fdu" id="qKY-Oi-Iqp">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="118.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="109.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Nx-Vv-mge">
+                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Nx-Vv-mge">
                                                     <rect key="frame" x="18" y="28" width="64" height="64"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="52" id="CLA-DA-fmS"/>
@@ -425,13 +425,13 @@
                                                         <action selector="playMix:" destination="QTu-1j-fdu" eventType="touchUpInside" id="Bbh-ho-5ci"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="My Great Song" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bg3-FI-Sud">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" misplaced="YES" text="My Great Song" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bg3-FI-Sud">
                                                     <rect key="frame" x="92" y="30" width="442" height="32"/>
                                                     <fontDescription key="fontDescription" name="California" family="California" pointSize="32"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Stars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vnr-Yi-GJ9">
-                                                    <rect key="frame" x="544" y="37" width="40" height="20"/>
+                                                    <rect key="frame" x="544" y="36" width="40" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="42" id="vOx-db-Ac4"/>
                                                     </constraints>
@@ -444,7 +444,7 @@
                                                         </mask>
                                                     </variation>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BDG-lG-4k6">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="6" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BDG-lG-4k6">
                                                     <rect key="frame" x="558" y="57" width="13" height="23"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="42" id="xN4-Rp-4pq"/>
@@ -458,13 +458,13 @@
                                                         </mask>
                                                     </variation>
                                                 </label>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="A luxurious blend of beats and vocal harmonies" translatesAutoresizingMaskIntoConstraints="NO" id="P6t-lV-Ynx">
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" text="A luxurious blend of beats and vocal harmonies" translatesAutoresizingMaskIntoConstraints="NO" id="P6t-lV-Ynx">
                                                     <rect key="frame" x="92" y="70" width="442" height="40"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" name="California" family="California" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textView>
-                                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BGt-Hw-a0e">
+                                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BGt-Hw-a0e">
                                                     <rect key="frame" x="31" y="45" width="30" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="30" id="51K-Nq-nn2"/>
@@ -514,7 +514,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HeaderCell" rowHeight="88" id="zGf-55-DDg">
-                                        <rect key="frame" x="0.0" y="147" width="600" height="88"/>
+                                        <rect key="frame" x="0.0" y="138" width="600" height="88"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zGf-55-DDg" id="Njk-aF-nrZ">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="87.5"/>
@@ -907,12 +907,66 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LOF-hT-c8j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3083" y="488"/>
+            <point key="canvasLocation" x="3055" y="14"/>
         </scene>
-        <!--Song List View Controller-->
+        <!--Search Community-->
+        <scene sceneID="bxO-Jd-3Mk">
+            <objects>
+                <viewController storyboardIdentifier="SearchCommunityViewController" title="Search Community" id="2TC-EV-aoN" customClass="SearchCommunityViewController" customModule="MiniMix" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8zH-OS-Dhg"/>
+                        <viewControllerLayoutGuide type="bottom" id="FW9-NB-B0P"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rVF-MG-HoR">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="iw7-1E-R6l">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="ccT-lF-D9a"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fg9-Za-yzf">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="iw7-1E-R6l" secondAttribute="trailing" constant="-20" id="0Yw-WK-cn5"/>
+                            <constraint firstItem="fg9-Za-yzf" firstAttribute="top" secondItem="iw7-1E-R6l" secondAttribute="bottom" id="20O-O7-50C"/>
+                            <constraint firstItem="FW9-NB-B0P" firstAttribute="top" secondItem="fg9-Za-yzf" secondAttribute="bottom" id="442-tB-0av"/>
+                            <constraint firstItem="fg9-Za-yzf" firstAttribute="top" secondItem="iw7-1E-R6l" secondAttribute="bottom" id="OPk-se-5pT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fg9-Za-yzf" secondAttribute="trailing" constant="-20" id="P7A-Lf-yBo"/>
+                            <constraint firstItem="fg9-Za-yzf" firstAttribute="leading" secondItem="rVF-MG-HoR" secondAttribute="leadingMargin" constant="-20" id="TM9-su-Qs3"/>
+                            <constraint firstItem="FW9-NB-B0P" firstAttribute="top" secondItem="fg9-Za-yzf" secondAttribute="bottom" id="VTI-k8-IxB"/>
+                            <constraint firstItem="fg9-Za-yzf" firstAttribute="leading" secondItem="rVF-MG-HoR" secondAttribute="leadingMargin" constant="-20" id="rdY-Ul-CIX"/>
+                            <constraint firstItem="iw7-1E-R6l" firstAttribute="top" secondItem="8zH-OS-Dhg" secondAttribute="bottom" id="tU9-DZ-dKC"/>
+                            <constraint firstItem="iw7-1E-R6l" firstAttribute="leading" secondItem="rVF-MG-HoR" secondAttribute="leadingMargin" constant="-20" id="yNL-LK-dDo"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="OPk-se-5pT"/>
+                                <exclude reference="TM9-su-Qs3"/>
+                                <exclude reference="442-tB-0av"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="searchBar" destination="iw7-1E-R6l" id="joE-UN-uW0"/>
+                        <outlet property="tableView" destination="fg9-Za-yzf" id="McG-7K-LMk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uq4-UM-nBt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="821" y="1449"/>
+        </scene>
+        <!--Community Mixes List View Controller-->
         <scene sceneID="MFe-4C-c2d">
             <objects>
-                <viewController id="ijN-ex-icL" customClass="SongListViewController" customModule="MiniMix" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ijN-ex-icL" customClass="CommunityMixesListViewController" customModule="MiniMix" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="0ql-7l-esp"/>
                         <viewControllerLayoutGuide type="bottom" id="hY0-YX-Qgd"/>
@@ -1042,23 +1096,16 @@
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="eRB-27-GFJ">
-                        <rightBarButtonItems>
-                            <barButtonItem systemItem="add" id="jeL-db-4rU">
-                                <connections>
-                                    <action selector="addNewSong" destination="ijN-ex-icL" id="Peu-Fh-ABk"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem enabled="NO" systemItem="search" id="dzr-ef-4mo">
-                                <connections>
-                                    <action selector="shareAction" destination="ijN-ex-icL" id="TaV-2k-X9K"/>
-                                </connections>
-                            </barButtonItem>
-                        </rightBarButtonItems>
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="8he-cw-hcQ">
+                            <connections>
+                                <action selector="doSongSearch" destination="ijN-ex-icL" id="E0A-lp-3Sz"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="shareButton" destination="dzr-ef-4mo" id="JmV-qx-ueH"/>
-                        <outlet property="tableView" destination="3t7-To-hsd" id="lQE-5d-RKw"/>
+                        <outlet property="searchButton" destination="8he-cw-hcQ" id="XHv-1R-G7X"/>
+                        <outlet property="tableView" destination="3t7-To-hsd" id="CBv-d3-mY3"/>
                         <segue destination="Rn1-0B-J27" kind="show" id="FSk-oy-rUd"/>
                     </connections>
                 </viewController>
