--- a/MiniMix/Base.lproj/Main.storyboard
+++ b/MiniMix/Base.lproj/Main.storyboard
@@ -402,8 +402,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="109.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Nx-Vv-mge">
-                                                    <rect key="frame" x="18" y="28" width="64" height="64"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Nx-Vv-mge">
+                                                    <rect key="frame" x="18" y="23" width="64" height="64"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="52" id="CLA-DA-fmS"/>
                                                         <constraint firstAttribute="height" constant="30" id="Fc8-JJ-Vol"/>
@@ -458,14 +458,14 @@
                                                         </mask>
                                                     </variation>
                                                 </label>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" text="A luxurious blend of beats and vocal harmonies" translatesAutoresizingMaskIntoConstraints="NO" id="P6t-lV-Ynx">
-                                                    <rect key="frame" x="92" y="70" width="442" height="40"/>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="A luxurious blend of beats and vocal harmonies" translatesAutoresizingMaskIntoConstraints="NO" id="P6t-lV-Ynx">
+                                                    <rect key="frame" x="92" y="65" width="442" height="36"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" name="California" family="California" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textView>
-                                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BGt-Hw-a0e">
-                                                    <rect key="frame" x="31" y="45" width="30" height="30"/>
+                                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BGt-Hw-a0e">
+                                                    <rect key="frame" x="31" y="40" width="30" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="30" id="51K-Nq-nn2"/>
                                                         <constraint firstAttribute="height" constant="30" id="eWI-ZD-sgP"/>
@@ -1128,13 +1128,26 @@
                                                     <fontDescription key="fontDescription" name="California" family="California" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textView>
+                                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gop-DX-6XA">
+                                                    <rect key="frame" x="31" y="45" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="bt8-l1-nFZ"/>
+                                                        <constraint firstAttribute="height" constant="30" id="n7Y-BJ-i2k"/>
+                                                    </constraints>
+                                                    <state key="normal" image="bigStop"/>
+                                                    <connections>
+                                                        <action selector="stopPlayback:" destination="Mi0-wo-RIq" eventType="touchUpInside" id="B7S-3n-BpZ"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstItem="cfz-hi-fbW" firstAttribute="leading" secondItem="wNp-a0-zz9" secondAttribute="trailing" constant="10" id="3pg-Rj-zMg"/>
                                                 <constraint firstItem="cfz-hi-fbW" firstAttribute="top" secondItem="fCR-Qp-b9D" secondAttribute="bottom" constant="2" id="52M-hI-N7Q"/>
                                                 <constraint firstItem="cfz-hi-fbW" firstAttribute="top" secondItem="fCR-Qp-b9D" secondAttribute="bottom" id="AVg-Tc-f4f"/>
+                                                <constraint firstItem="gop-DX-6XA" firstAttribute="leading" secondItem="GJt-Td-CT6" secondAttribute="leadingMargin" constant="23" id="BSx-cT-JtA"/>
                                                 <constraint firstItem="fCR-Qp-b9D" firstAttribute="centerY" secondItem="cfz-hi-fbW" secondAttribute="centerY" id="Dvf-gv-zcR"/>
+                                                <constraint firstItem="gop-DX-6XA" firstAttribute="centerY" secondItem="GJt-Td-CT6" secondAttribute="centerY" id="I2p-dS-CJa"/>
                                                 <constraint firstItem="fCR-Qp-b9D" firstAttribute="centerY" secondItem="1Ix-5r-plz" secondAttribute="centerY" id="Ogt-kV-nHQ"/>
                                                 <constraint firstItem="1Ix-5r-plz" firstAttribute="leading" secondItem="ngN-jc-54y" secondAttribute="trailing" constant="10" id="RHH-Nm-GBz"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="wNp-a0-zz9" secondAttribute="bottom" constant="0.5" id="SYc-BQ-r6X"/>
@@ -1157,9 +1170,11 @@
                                             </variation>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="playButton" destination="ngN-jc-54y" id="Uck-Qr-61j"/>
                                             <outlet property="songCommentLabel" destination="wNp-a0-zz9" id="EKf-2E-9c4"/>
                                             <outlet property="songStarsRankLable" destination="cfz-hi-fbW" id="axv-jV-LE7"/>
                                             <outlet property="songTitleLabel" destination="1Ix-5r-plz" id="GuN-ek-4q8"/>
+                                            <outlet property="stopButton" destination="gop-DX-6XA" id="muE-u8-ctz"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
